--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -502,6 +502,27 @@ section .container {
   background-color: #1c7d32;
 }
 
+#skills .skillsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  width: 100%;
+}
+
+#skills .skillsContainer .skill--box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 120px;
+  height: 120px;
+  margin: 0.5rem;
+  border-radius: 8px;
+  transition: .3s ease-in-out;
+  background-color: #042e5f;
+  box-shadow: rgb(233 173 53 / 30%) 0px 0px 30px;
+}
+
 /*--------------------------------------------------------------
 # Interests
 --------------------------------------------------------------*/
