--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -470,6 +470,16 @@ section .container {
 /*--------------------------------------------------------------
 # Skills
 --------------------------------------------------------------*/
+#projects .project-image {
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+  object-fit: cover;
+} 
+
+/*--------------------------------------------------------------
+# Skills
+--------------------------------------------------------------*/
 .skills .progress {
   height: 50px;
   display: block;
