--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,11 +34,12 @@ body::before {
 
 a {
   color: #12d640;
+  text-decoration: none;
 }
 
 a:hover {
   color: #35e888;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 img {
@@ -481,12 +482,45 @@ p.section-title {
 /*--------------------------------------------------------------
 # Projects
 --------------------------------------------------------------*/
-#projects .project-image {
-  width: 100%;
-  height: 300px;
+#projects .project-card {
+  position: relative;
+  cursor: pointer;
   overflow: hidden;
+  height: 500px;
+  border-radius: 10px;
+  box-shadow: rgb(18, 214, 64) 0px 0px 10px;
+}
+
+#projects .project-card .project-image {
+  position: absolute;
   object-fit: cover;
-} 
+  width: 100% !important;
+  height: 100% !important;
+  left: 0px !important;
+  top: 0px !important;
+}
+
+#projects .project-card .content {
+  position: absolute;
+  width: 100% !important;
+  height: 100% !important;
+  left: 0px !important;
+  top: 0px !important;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  padding: 1.4rem 2rem;
+  opacity: 0;
+  transform: translateY(10%);
+  transition: opacity 300ms ease-in-out 0s, transform 300ms ease-in-out 0s;
+}
+
+#projects .project-card .content:hover {
+  opacity: 1;
+  transform: translateY(0%);
+  background: linear-gradient(0deg, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0.2) 100%);
+}
 
 /*--------------------------------------------------------------
 # Skills
